[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/naruto1/Naruto.png" type="Texture" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://Naruto1.gd" type="Script" id=3]
[ext_resource path="res://healthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music and Sounds/Explosion.ogg" type="AudioStream" id=6]
[ext_resource path="res://Music and Sounds/Explosion1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Music and Sounds/Nature Sounds Pack/Footstep/FootstepGrass02.wav" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 407, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 450, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 493, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 536, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 579, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 622, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 665, 753, 43, 62 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 655, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 701, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 747, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 793, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 839, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 885, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 931, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 977, 682, 46, 62 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 296, 438, 37, 73 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 3004, 54, 73 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 552, 3004, 54, 73 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 606, 3004, 54, 73 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 660, 3004, 54, 73 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 37, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 74, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 111, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 148, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 185, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 222, 682, 37, 62 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 259, 682, 37, 62 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 32 ) ],
"loop": true,
"name": "stanceRight",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "throw",
"speed": 40.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 12.0

[sub_resource type="CapsuleShape2D" id=34]
radius = 3.33333
height = 58.0

[sub_resource type="CapsuleShape2D" id=33]
radius = 7.0
height = 52.0

[node name="Naruto1" type="KinematicBody2D"]
position = Vector2( 246, 261 )
collision_layer = 2
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
smoothing_enabled = true
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -14.5436, 36.64 )
scale = Vector2( 1.32668, 1.32668 )
frames = SubResource( 1 )
animation = "right"
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -25, 54 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -4, 31 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -27, 33 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.95

[node name="healthBar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = -41.0
margin_top = -7.0
margin_right = -41.0
margin_bottom = -7.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -27, 31 )
scale = Vector2( 2.4, 1 )
shape = SubResource( 34 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -26, 39 )
shape = SubResource( 33 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( -26, 41 )

[node name="SmokeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 15.016
mix_target = 1

[node name="ShurikenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 18.631

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 20.015
area_mask = 0

[node name="steps" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -1.0
mix_target = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -38.0
margin_top = -7.0
margin_right = -17.0
margin_bottom = -4.0

[node name="Health" type="ColorRect" parent="."]
margin_left = -43.0
margin_top = -4.0
margin_right = -9.0
margin_bottom = -3.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Label" type="Label" parent="Health"]
margin_left = -5.0
margin_top = -14.0
margin_right = 30.0
align = 3
valign = 2

[node name="Red" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 34.0
margin_bottom = 1.0
color = Color( 0.41954, 0.452638, 0.457031, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 34.0
margin_bottom = 1.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
